adding theme settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Kanban",
         "richtexteditor",
         "sparkline",
-        "syncfusion"
+        "syncfusion",
+        "yval"
     ]
 }
